--- a/src/AngularProject/src/app/pages/main-page/main-page.component.html
+++ b/src/AngularProject/src/app/pages/main-page/main-page.component.html
@@ -43,7 +43,7 @@
           Courses
         </div>
         <div class="d-flex flex-wrap gap-3 justify-content-center">
-          <app-cource *ngFor="let course of courses" [course]="course"></app-cource>
+          <app-course *ngFor="let course of courses" [course]="course"></app-course>
         </div>
       </div>
     </section>
