--- a/src/AngularProject/src/app/pages/login/login.page.html
+++ b/src/AngularProject/src/app/pages/login/login.page.html
@@ -18,7 +18,7 @@
                 <button type="button" class="toggle-password" (click)="hidePassword = !hidePassword">👁</button>
             </div>
 
-            <p class="signup-text"> Don’t remember password? <button class="sign-btn" routerLink="../password_forget">Reset It</button></p>
+            <p class="signup-text"> Don’t remember password? <a class="sign-btn" routerLink="../password_forget">Reset It</a></p>
 
             <div class="container">
                 <button id="submit" type="submit" class="sign-up-btn">Log in</button>
