--- a/src/AngularProject/src/app/pages/login/login.page.scss
+++ b/src/AngularProject/src/app/pages/login/login.page.scss
@@ -108,6 +108,7 @@ input:focus {
   cursor: pointer;
   transition: all 0.3s ease-in-out;
   background: transparent;
+  text-decoration: none;
 }
 
 #sign-btn:hover, .sign-btn:hover {
