--- a/src/AngularProject/src/app/components/navigation/navigation.component.scss
+++ b/src/AngularProject/src/app/components/navigation/navigation.component.scss
@@ -29,21 +29,26 @@ body{
 
 #navigation-bar{
     display: block;
+    justify-self: center;
+    align-self: center;
 }
 
 #head-div{
     padding: 10pt;
-    display: flex;
+    // display: flex;
     background-color: white;
     border-bottom-style:ridge;
     border-width: 1px;
     border-color: black;
     box-shadow: 0px 1px 20px #cecece;
-    justify-content: space-between;
+    // justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 #log-btns{
     width: 135pt;
+    justify-self: end;
 }
 
 #login-btn{
@@ -82,9 +87,10 @@ body{
 
 
 .navigation-logged-in {
+    justify-self: end;
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: 15px;
 }
 
 #notification-button {
@@ -108,4 +114,8 @@ body{
 #notification-button mat-icon {
   font-size: 24px;
   color: #EA2839; 
+}
+
+.nav-logout {
+    margin-right: 0;
 }
