--- a/src/AngularProject/src/app/pages/profile/profile.page.html
+++ b/src/AngularProject/src/app/pages/profile/profile.page.html
@@ -55,6 +55,13 @@
             class="form-input"
             [ngClass]="{'error-input': settingsForm.get('newPassword')?.invalid && settingsForm.get('newPassword')?.touched}">
       <button type="button" class="toggle-password" (click)="hidePassword = !hidePassword">👁</button>
+      <input id="repeatPassword"
+            [type]="hideRepeatPassword ? 'password' : 'text'"
+            formControlName="repeatPassword"
+            placeholder="Repeat Password"
+            class="form-input"
+            [ngClass]="{'error-input': settingsForm.get('repeatPassword')?.touched && settingsForm.get('repeatPassword')?.value !== settingsForm.get('newPassword')?.value}">
+      <button type="button" class="toggle-password" (click)="hideRepeatPassword = !hideRepeatPassword">👁</button>
     </div>
 
     <p class="error-message"
@@ -65,7 +72,7 @@
     </p>
 
     <!-- Повтор пароля -->
-    <div class="container">
+    <!-- <div class="container">
       <input id="repeatPassword"
             [type]="hideRepeatPassword ? 'password' : 'text'"
             formControlName="repeatPassword"
@@ -73,7 +80,7 @@
             class="form-input"
             [ngClass]="{'error-input': settingsForm.get('repeatPassword')?.touched && settingsForm.get('repeatPassword')?.value !== settingsForm.get('newPassword')?.value}">
       <button type="button" class="toggle-password" (click)="hideRepeatPassword = !hideRepeatPassword">👁</button>
-    </div>
+    </div> -->
 
     <p class="error-message"
       *ngIf="settingsForm.get('repeatPassword')?.touched && settingsForm.get('repeatPassword')?.value !== settingsForm.get('newPassword')?.value">
