--- a/src/AngularProject/src/app/pages/profile/profile.page.html
+++ b/src/AngularProject/src/app/pages/profile/profile.page.html
@@ -55,13 +55,15 @@
             class="form-input"
             [ngClass]="{'error-input': settingsForm.get('newPassword')?.invalid && settingsForm.get('newPassword')?.touched}">
       <button type="button" class="toggle-password" (click)="hidePassword = !hidePassword">👁</button>
+    </div>
+    <div class="container">  
       <input id="repeatPassword"
             [type]="hideRepeatPassword ? 'password' : 'text'"
             formControlName="repeatPassword"
             placeholder="Repeat Password"
             class="form-input"
             [ngClass]="{'error-input': settingsForm.get('repeatPassword')?.touched && settingsForm.get('repeatPassword')?.value !== settingsForm.get('newPassword')?.value}">
-      <button type="button" class="toggle-password" (click)="hideRepeatPassword = !hideRepeatPassword">👁</button>
+        <button type="button" class="toggle-password" (click)="hideRepeatPassword = !hideRepeatPassword">👁</button>
     </div>
 
     <p class="error-message"
@@ -71,27 +73,18 @@
       <span *ngIf="settingsForm.get('newPassword')?.errors?.['pattern']">Must include uppercase, lowercase, number and special char.</span>
     </p>
 
-    <!-- Повтор пароля -->
-    <!-- <div class="container">
-      <input id="repeatPassword"
-            [type]="hideRepeatPassword ? 'password' : 'text'"
-            formControlName="repeatPassword"
-            placeholder="Repeat Password"
-            class="form-input"
-            [ngClass]="{'error-input': settingsForm.get('repeatPassword')?.touched && settingsForm.get('repeatPassword')?.value !== settingsForm.get('newPassword')?.value}">
-      <button type="button" class="toggle-password" (click)="hideRepeatPassword = !hideRepeatPassword">👁</button>
-    </div> -->
-
     <p class="error-message"
       *ngIf="settingsForm.get('repeatPassword')?.touched && settingsForm.get('repeatPassword')?.value !== settingsForm.get('newPassword')?.value">
       Passwords do not match.
     </p>
 
-    <button type="submit"
-            class="form-button"
-            [disabled]="!settingsForm.valid || settingsForm.get('repeatPassword')?.value !== settingsForm.get('newPassword')?.value">
-      Change Password
-    </button>
+    <div class="container">
+      <button type="submit"
+              class="form-button"
+              [disabled]="!settingsForm.valid || settingsForm.get('repeatPassword')?.value !== settingsForm.get('newPassword')?.value">
+        Change Password
+      </button>
+    </div>
   </form>
     <!-- 📚 User Courses -->
     <div class="profile-events">
