--- a/src/AngularProject/src/app/pages/reset-pass/reset-pass.component.html
+++ b/src/AngularProject/src/app/pages/reset-pass/reset-pass.component.html
@@ -43,7 +43,7 @@
             </div>
 
             <div class="container" *ngIf="tryToLogin">
-                <a id="submit" class="sign-up-btn btn" href="/login" routerLink="login">Log in</a>
+                <a id="submit" class="sign-up-btn btn" href="#login" routerLink="login">Log in</a>
             </div>
 
             <!-- <div class="container justify-content-center" *ngIf="loginError">
