--- a/src/AngularProject/src/app/components/footer/footer.component.scss
+++ b/src/AngularProject/src/app/components/footer/footer.component.scss
@@ -37,15 +37,28 @@ hr{
     font-weight: bold;
 }
 
-.socsit:hover{
-    border-width: 0px;
-}
-
+.socsit {
+    color: black;
+    text-decoration: none;
+    display: inline-block;
+    padding: 0%
+  }
+  
+  .socsit:hover {
+    text-decoration: none;
+    color: #EA2839;
+    border-color: transparent;
+  }
+  
 #info{
     font-family: "Source Sans 3";
     font-size: 8pt;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 1px 20px #cecece;
+}
+
+i{
+    background-color: black;
 }
 
 #logo{
