--- a/src/AngularProject/src/app/pages/main-page/main-page.component.scss
+++ b/src/AngularProject/src/app/pages/main-page/main-page.component.scss
@@ -24,6 +24,7 @@ body {
   .controls {
     position: absolute;
     top: 50vh;
+    gap: 1vh;
     right: 20px;
     display: flex;
     flex-direction: column;
