--- a/src/AngularProject/src/app/components/navigation/navigation.component.html
+++ b/src/AngularProject/src/app/components/navigation/navigation.component.html
@@ -6,6 +6,7 @@
     <a class="nav-btn btn" href="#calendar">My calendar</a>
     <a class="nav-btn btn" href="#courses">Courses</a>
     <a class="nav-btn btn">Coaches</a>
+    <a class="nav-btn btn" routerLink="/analytics">Analytics</a>
     <a class="nav-btn btn" routerLink="/profile">Profile</a>
   </nav>
   
