--- a/src/AngularProject/src/app/components/course/course.component.html
+++ b/src/AngularProject/src/app/components/course/course.component.html
@@ -1,20 +1,25 @@
 <div class="card">
-    <div class="image-wrapper">
-      <img
-        class="card-img-top cource-img"
-        src="https://media.istockphoto.com/id/465383082/cs/fotografie/plavkyn%C4%9B-u-baz%C3%A9nu.jpg?s=612x612&w=0&k=20&c=PnaXB806MSefeEXG-slq5Fd1_eeaLSR2IsphBrWqmYI="
-        alt="Photo of {{ course.serviceName }}"
-      />
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">{{ course.serviceName }}</h5>
-      <div class="d-flex">
-        <div class="">
-          <button class="btn buy" (click)="reserveCourse(course.id)">Reserve</button>
-        </div>
-        <div class="ms-sm-auto">
-          <a class="btn info" href="/course/{{ course.id }}">More info</a>
-        </div>
+  <div class="image-wrapper">
+    <img
+      class="card-img-top cource-img"
+      src="https://media.istockphoto.com/id/465383082/cs/fotografie/plavkyn%C4%9B-u-baz%C3%A9nu.jpg?s=612x612&w=0&k=20&c=PnaXB806MSefeEXG-slq5Fd1_eeaLSR2IsphBrWqmYI="
+      alt="Photo of {{ course.serviceName }}"
+    />
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">{{ course.serviceName }}</h5>
+
+    <p><strong>Coach:</strong> {{ trainerName }}</p>
+    <p><strong>Free slots:</strong> {{ course.totalCapacity - course.currentCapacity }}</p>
+    <p><strong>Price:</strong> {{ course.price }} Kč</p>
+
+    <div class="d-flex">
+      <div>
+        <button class="btn buy" (click)="reserveCourse(course.id)">Reserve</button>
+      </div>
+      <div class="ms-sm-auto">
+        <a class="btn info" [routerLink]="['/course', course.id]">More info</a>
       </div>
     </div>
   </div>
+</div>
