course info changed

--- a/src/AngularProject/src/app/components/course/course.component.html
+++ b/src/AngularProject/src/app/components/course/course.component.html
@@ -9,10 +9,11 @@
   <div class="card-body">
     <h5 class="card-title">{{ course.serviceName }}</h5>
 
-    <p><strong>Coach:</strong> {{ trainerName }}</p>
+    <p><strong>Time:</strong> {{ course.start | date:'HH:mm' }} - {{ course.end | date:'HH:mm' }}</p>
     <p><strong>Free slots:</strong> {{ course.totalCapacity - course.currentCapacity }}</p>
     <p><strong>Price:</strong> {{ course.price }} Kč</p>
 
+    
     <div class="d-flex">
       <div>
         <button class="btn buy" (click)="reserveCourse(course.id)">Reserve</button>
