Cource component small changes

--- a/src/AngularProject/src/app/components/course/course.component.html
+++ b/src/AngularProject/src/app/components/course/course.component.html
@@ -9,6 +9,7 @@
   <div class="card-body">
     <h5 class="card-title">{{ course.serviceName }}</h5>
 
+    <p><strong>Date:</strong> {{ course.start | date:'dd.MM.yyyy' }}</p>
     <p><strong>Time:</strong> {{ course.start | date:'HH:mm' }} - {{ course.end | date:'HH:mm' }}</p>
     <p [ngClass]="{'full': course.totalCapacity - course.currentCapacity == 0}"><strong>Free slots:</strong> {{ course.totalCapacity - course.currentCapacity }}</p>
     <p><strong>Price:</strong> {{ course.price }} Kč</p>
