--- a/src/AngularProject/src/app/components/navigation/navigation.component.html
+++ b/src/AngularProject/src/app/components/navigation/navigation.component.html
@@ -29,7 +29,7 @@
       </button>
     </nav>
     <button class="nav-btn nav-logout" id="balance" routerLink="/payment">
-      {{MoneyBalance}},-
+      {{balance}},-
       <img src="assets/icons/robucks.svg" alt="money" class="icon" />
     </button>
     <div id="logout-btn">
