--- a/src/AngularProject/src/app/pages/payment/payment.component.html
+++ b/src/AngularProject/src/app/pages/payment/payment.component.html
@@ -25,7 +25,8 @@
           />
         </div>
 
-        <button id="pay-btn">Pay {{ paymentAmount }}</button>
+        <button id="pay-btn" (click)="depositMoney()">Pay {{ paymentAmount }}</button>
+
       </div>
     </div>
   </div>
