--- a/src/AngularProject/src/app/pages/course-page/course-page.component.html
+++ b/src/AngularProject/src/app/pages/course-page/course-page.component.html
@@ -40,7 +40,7 @@
             </div>
             <div><svg xmlns="http://www.w3.org/2000/svg" width="16pt" height="16pt" fill="currentColor" class="bi bi-person-lines-fill">
                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z"/>
-              </svg>Spots available: {{ course.currentCapacity }}/{{ course.totalCapacity }}
+              </svg>Spots available: {{ course.totalCapacity - course.currentCapacity }}/{{ course.totalCapacity }}
             </div>
             <div>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16pt" height="16pt" fill="currentColor" class="bi bi-currency-dollar">
