--- a/src/AngularProject/src/app/components/course/course.component.html
+++ b/src/AngularProject/src/app/components/course/course.component.html
@@ -1,26 +1,42 @@
-<div class="card">
+<div class="card h-100 d-flex flex-column">
   <div class="image-wrapper">
     <img
       class="card-img-top cource-img"
-      src="https://media.istockphoto.com/id/465383082/cs/fotografie/plavkyn%C4%9B-u-baz%C3%A9nu.jpg?s=612x612&w=0&k=20&c=PnaXB806MSefeEXG-slq5Fd1_eeaLSR2IsphBrWqmYI="
+      src="assets/media/course_back.png"
       alt="Photo of {{ course.serviceName }}"
     />
   </div>
-  <div class="card-body">
-    <h5 class="card-title">{{ course.serviceName }}</h5>
 
-    <p><strong>Date:</strong> {{ course.start | date:'dd.MM.yyyy' }}</p>
-    <p><strong>Time:</strong> {{ course.start | date:'HH:mm' }} - {{ course.end | date:'HH:mm' }}</p>
-    <p [ngClass]="{'full': course.totalCapacity - course.currentCapacity == 0}"><strong>Free slots:</strong> {{ course.totalCapacity - course.currentCapacity }}</p>
-    <p><strong>Price:</strong> {{ course.price }} Kč</p>
+  <div class="card-body d-flex flex-column">
+    <!-- Верхний блок: название -->
+    <div>
+      <h5 class="card-title">{{ course.serviceName }}</h5>
+    </div>
 
-    
-    <div class="d-flex">
-      <div>
-        <button class="btn buy" (click)="reserveCourse(course.id)">Reserve</button>
+    <!-- Нижний блок: всё остальное -->
+    <div class="mt-auto">
+      <!-- Дата и время -->
+      <div class="d-flex justify-content-between">
+        <p class="mb-1"><strong>Date:</strong> {{ course.start | date:'dd.MM.yyyy' }}</p>
+        <p class="mb-1"><strong>Time:</strong> {{ course.start | date:'HH:mm' }} - {{ course.end | date:'HH:mm' }}</p>
       </div>
-      <div class="ms-sm-auto">
-        <a class="btn info" [routerLink]="['/course', course.id]">More info</a>
+
+      <!-- Слоты и цена -->
+      <div class="d-flex justify-content-between">
+        <p class="mb-2" [ngClass]="{'full': course.totalCapacity - course.currentCapacity == 0}">
+          <strong>Free slots:</strong> {{ course.totalCapacity - course.currentCapacity }}
+        </p>
+        <p class="mb-2"><strong>Price:</strong> {{ course.price }} Kč</p>
+      </div>
+
+      <!-- Кнопки -->
+      <div class="d-flex">
+        <div>
+          <button class="btn buy" (click)="reserveCourse(course.id)">Reserve</button>
+        </div>
+        <div class="ms-sm-auto">
+          <a class="btn info" [routerLink]="['/course', course.id]">More info</a>
+        </div>
       </div>
     </div>
   </div>
