--- a/src/AngularProject/src/app/components/course/course.component.scss
+++ b/src/AngularProject/src/app/components/course/course.component.scss
@@ -1,7 +1,7 @@
 .card{
     background: #f2f2f2;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    height: 409px;
+    height: 100%;
     width: 305px;
 }
 
