--- a/src/AngularProject/src/app/components/course/course.component.scss
+++ b/src/AngularProject/src/app/components/course/course.component.scss
@@ -31,6 +31,20 @@
     font-size: 14pt;
 }
 
+
+.cancel{
+    background-color: white;
+    color: #EA2839;
+    font-size: 14pt;
+}
+
+
+.cancel:hover{
+    background-color: transparent;
+    color: #0000;
+    font-size: 14pt;
+}
+
 .buy:hover{
     background-color: #b71c1c;
 }
